[package]
name = "runtime"
version = "1.1.4"
authors = [ "Microsoft Corporation" ]
edition = "2021"
description = "Demikernel's Runtime"
readme = "README.md"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/runtime"
license-file = "LICENSE.txt"

[dependencies]
arrayvec = "0.7.2"
derive_more = "0.99.17"
eui48 = "1.1.0"
float_duration = "0.3.3"
flexi_logger = "0.22.5"
futures = "0.3.21"
libc = "0.2.126"
log = "0.4.17"
slab = "0.4.6"

scheduler = { git = "https://github.com/demikernel/scheduler", rev = "435dbccafeb39379bd46bf15c0eda50feca3c6df" }
liburing = { git = "https://github.com/demikernel/liburing-rs", rev = "33a4aca6a134423824f1934928e08bf196d2e0bb", optional = true}
dpdk-rs = { git = "https://github.com/demikernel/dpdk-rs", rev = "517052c05a27bff3dc7744f71de1ffa960b05c56", optional = true }
perftools = { git = "https://github.com/demikernel/perftools", rev = "9f4391f4a825bc9117f085805cf4abbce6bb7c89", optional = true}

[features]
default = [ ]
libdpdk = [ "dpdk-rs" ]
mlx4 = [ "dpdk-rs/mlx4" ]
mlx5 = [ "dpdk-rs/mlx5" ]

# Build profile used for releases.
[profile.release]
opt-level = 3             # Enable all compiler optimizations.
debug = false             # Do not include any debug info in the binary.
debug-assertions = false  # Do not include any debug assertions in the binary.
overflow-checks = false   # Do not check for overflows at runtime.
lto = "fat"               # Perform link time optimizations across all dependencies (overridden).
panic = "abort"           # Terminate the process upon panic (overridden).
incremental = false       # Disable incremental compilation.
codegen-units = 1         # Produce a single code generation unit (overridden).
rpath = false             # Disable runtime search path.
