# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.

[package]
name = "runtime"
version = "1.2.2"
authors = [ "Microsoft Corporation" ]
edition = "2021"
description = "Demikernel's Runtime"
readme = "README.md"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/runtime"
license-file = "LICENSE.txt"

[dependencies]
arrayvec = "0.7.2"
derive_more = "0.99.17"
eui48 = "1.1.0"
float_duration = "0.3.3"
flexi_logger = "0.22.5"
futures = "0.3.21"
libc = "0.2.126"
log = "0.4.17"
slab = "0.4.7"

scheduler = { git = "https://github.com/demikernel/scheduler", rev = "9037ee6da4322e902e79fdcf8e31999cc1a6d31f" }
liburing = { git = "https://github.com/demikernel/liburing-rs", rev = "8ac9c294026862c0860b3e10a779cdcea23c2227", optional = true}
dpdk-rs = { git = "https://github.com/demikernel/dpdk-rs", rev = "8e99db8efded55903a2eaaf74cb36665030601f5", optional = true }
perftools = { git = "https://github.com/demikernel/perftools", rev = "26928018caec1c8201511c5b2440005440b5dcae", optional = true}

[features]
default = [ ]
libdpdk = [ "dpdk-rs" ]
mlx4 = [ "dpdk-rs/mlx4" ]
mlx5 = [ "dpdk-rs/mlx5" ]

# Build profile used for releases.
[profile.release]
opt-level = 3             # Enable all compiler optimizations.
debug = false             # Do not include any debug info in the binary.
debug-assertions = false  # Do not include any debug assertions in the binary.
overflow-checks = false   # Do not check for overflows at runtime.
lto = "fat"               # Perform link time optimizations across all dependencies (overridden).
panic = "abort"           # Terminate the process upon panic (overridden).
incremental = false       # Disable incremental compilation.
codegen-units = 1         # Produce a single code generation unit (overridden).
rpath = false             # Disable runtime search path.

# Build profile used for development and debugging.
[profile.dev]
opt-level = 0             # Disable all compiler optimizations.
debug = true              # Output full debug info in the binary.
debug-assertions = true   # Include debug assertions in the binary.
overflow-checks = true    # Check for overflows at runtime.
lto = "off"               # Disable link time optimization (overridden).
panic = 'unwind'          # Unwind the stack upon panic.
incremental = true        # Incremental build.
codegen-units = 256       # Produce multiple code generation units.
rpath = false             # Disable runtime search path.
